--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 
 <section class="projects">
     <h2>Projects:</h2>
+    
+</section>
+
+<section class="tiles">
     <div class="project-grid">
         <a href="#" class="project-tile">
             <div class="tile-content">
@@ -79,24 +83,10 @@
     </div>
 </section>
 
-<section class="work-experience">
+
+<section class="work-exp">
     <h2>Work Experience</h2>
-    <div class="timeline">
-        <div class="timeline-item">
-            <div class="timeline-content">
-                <h3>Research Intern at DGRE-DRDO</h3>
-                <p><strong>July 2024 - Present</strong></p>
-                <p>Worked on developing scalable web applications, optimized SQL queries, and collaborated with cross-functional teams.</p>
-            </div>
-        </div>
-        <div class="timeline-item">
-            <div class="timeline-content">
-                <h3>Intern at IIT Mandi</h3>
-                <p><strong>January 2024 - April 2024</strong></p>
-                <p>Assisted in developing an internal tool that improved team efficiency by 30%.</p>
-            </div>
-        </div>
-    </div>
+
 </section>
 
 
